--- a/StackQuestionsWeb/StackQuestionsWeb/StackQuestionsWeb.csproj
+++ b/StackQuestionsWeb/StackQuestionsWeb/StackQuestionsWeb.csproj
@@ -139,6 +139,9 @@
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\RootObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebHelpers\CustomHttpClientFactory.cs" />
+    <Compile Include="WebHelpers\HttpClientHelper.cs" />
+    <Compile Include="WebHelpers\IHttpClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
